<resources>
    <string name="app_name">HPMOTOCHAT</string>
    <string name="register_password">Password</string>
    <string name="register_email">Email</string>
    <string name="register_button">Register</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="no_account_register">No account? Register here!</string>
    <string name="sign_in">Sign in</string>
    <string name="log_out">Log out</string>
    <string name="sign_in_error">User does not exist</string>
    <string name="server_error">Server Error</string>
    <string name="ok">Ok</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type">Type a message</string>
    <string name="download_attachment">Download Attachment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Private</string>
    <string name="tab_text_2">Groups</string>
    <string name="title">Title</string>
</resources>
