<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainViewModel"
            type="com.hpmtutorial.hpmotochat.viewmodel.MainActivityViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.MainActivity"
        android:focusable="false">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_in_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="true"
            android:focusable="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/register_email"
                android:text="@={mainViewModel.email}"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/EditTextTheme" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_in_pass_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_in_email_layout"
            android:layout_margin="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_email_layout"
            app:passwordToggleEnabled="true"
            android:focusable="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_pass_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:text="@={mainViewModel.password}"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/EditTextTheme" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/material_text_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:onClick="@{()->mainViewModel.onRegisterClick()}"
            android:text="@string/no_account_register"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButton2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="@{()->mainViewModel.onSignInClick()}"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_pass_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:drawableStart="@drawable/googleg_standard_color_18"
            android:drawablePadding="8dp"
            android:elevation="2dp"
            android:padding="8dp"
            android:text="@string/sign_in_google"
            android:textColor="@color/colorBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/material_text_button"
            android:onClick="signIn"
            android:layout_margin="24dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>