<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="emailPassViewModel"
            type="com.hpmtutorial.hpmotochat.viewmodel.EmailPassViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.EmailPasswordActivity">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/register_email"
                android:text="@={emailPassViewModel.email}"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:theme="@style/EditTextTheme"
                android:textColorHint="@color/colorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_pass_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_email_layout"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@+id/register_email_layout"
            app:passwordToggleEnabled="true"
            tools:layout_editor_absoluteX="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_pass_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:text="@={emailPassViewModel.password}"
                android:theme="@style/EditTextTheme"
                android:textColorHint="@color/colorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_passcheck_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_pass_layout"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@+id/register_pass_layout"
            app:passwordToggleEnabled="true"
            tools:layout_editor_absoluteX="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_passcheck_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:text="@={emailPassViewModel.passwordCheck}"
                android:theme="@style/EditTextTheme"
                android:textColorHint="@color/colorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_passcheck_layout"
            android:layout_marginTop="64dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:onClick="@{()->emailPassViewModel.onRegisterClick()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>